# pk_prediction

./: .gitignore  1gpu.sh  README.md  pyproject.toml  transformer_1gpu.sh  transformer_classification_1gpu.sh
src/classification/: display_points.py  hyper_parameter_tuning.py  main.py
src/classify_prediction/: base.py  data.py  display_points.py  make_classify_dataset.py  model.py  model_test.py  model_train.py
src/crop_videos/: crop_video.py
src/get_video_and_frame_id/: README.md  create_text.py  extract_pk.py  get_frames.py  pyproject.toml
src/making_datasets/: base.py  generate_dataset.py
src/prediction/: data.py  display_points_and_move.py  hyper_parameter_tuning.py  model.py  model_test.py  model_train.py  pose_prediction.py  random_data.py
src/prediction_abe/: data.py  display_points.py  model.py  model_test.py  model_train.py  pose_prediction.py
src/transformer_classification/: base.py  data.py  main.py  make_classify_dataset.py  train.py  transformer.py  validate.py
src/transformer_prediction/: data.py  devide_files.py  hyper_parameter_tuning.py  lstm.py  lstm_train.py  main.py  test_and_record.py  train.py  train_parameter.py  transformer.py  validate.py
src/video_and_flameID/: README.md  create_text.py  extract_pk.py  get_flames.py
wandb/: latest-run
wandb/run-20241027_231342-u5j0mc51/: run-u5j0mc51.wandb
wandb/run-20241027_233329-r52uq5nc/: run-r52uq5nc.wandb
wandb/run-20241027_233535-zhfjon81/: run-zhfjon81.wandb
wandb/run-20241027_235858-qdfw2oqn/: run-qdfw2oqn.wandb
wandb/run-20241028_000126-v60s4y5f/: run-v60s4y5f.wandb
(+317 files in other folders)
