[tool.poetry]
name = "ai-exp-learning"
version = "0.1.0"
description = ""
authors = ["Your Name [you@example.com](mailto:you@example.com)"]
readme = "[README.md](http://readme.md/)"

[tool.poetry.dependencies]
python = "~3.10"
gym = "0.22.0"
pyworld = "^0.3.4"
pysptk = "^1.0.1"
dt = "^1.1.65"
pyyaml = "^6.0.2"
numpy = "1.26.0"
torchvision = "0.14.1"
pygame = "^2.6.1"
six = "^1.16.0"
matplotlib = "^3.9.2"
dtw = "^1.4.0"
ultralytics = "^8.3.15"
opencv-python = "^4.10.0.84"
moviepy = "^1.0.3"
pyqt5 = "^5.15.11"
yt-dlp = "^2024.10.22"
ffmpeg = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"